--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.24.0",
+    "@tanstack/react-query": "^5.77.1",
     "ajv": "^8.17.1",
     "expo": "^53.0.0",
     "expo-blur": "~14.1.4",
