--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ajv": "^8.17.1",
     "expo": "^54.0.13",
     "expo-blur": "~15.0.7",
+    "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
@@ -44,6 +45,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "^0.5.1",
