채팅 푸시 알림

--- a/app.json
+++ b/app.json
@@ -33,11 +33,25 @@
           "backgroundColor": "#ffffff"
         }
       ],
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/logo.png",
+          "color": "#ffffff"
+        }
+      ],
       "expo-font",
       "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "932000c0-3dbf-448f-b653-ef3f1d95a2d2"
+      }
+    },
+    "owner": "kiuuon"
   }
 }
