--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "expo-blur": "~15.0.7",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.9",
+    "expo-device": "~8.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-notifications": "~0.32.14",
     "expo-router": "~6.0.12",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
