--- a/app.json
+++ b/app.json
@@ -23,6 +23,7 @@
     },
     "android": {
       "package": "com.dongbang.www",
+      "googleServicesFile": "./google-services.json",
       "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/icon.png",
